-movie edit fixed

--- a/MoviesAppWeb/Views/Movie/Create.cshtml
+++ b/MoviesAppWeb/Views/Movie/Create.cshtml
@@ -57,7 +57,7 @@
 
                 <input asp-for="CoverImageFile" class="form-control" />
 
-                <span asp-validation-for="CoverImageFilePath" class="text-danger"></span>
+                <span asp-validation-for="CoverImageFile" class="text-danger"></span>
 
                 <span class="text-danger">@ViewBag.ImageError</span>
             </div>
