--- a/MoviesAppWeb/Views/Movie/Edit.cshtml
+++ b/MoviesAppWeb/Views/Movie/Edit.cshtml
@@ -68,13 +68,9 @@
                     <img asp-append-version="true" class="img-fluid" src="@Model.CoverImageFilePath" style="height:100px;" />
                 </div>
 
-                <input asp-for="CoverImageFile" class="form-control" />
-
-                <span asp-validation-for="CoverImageFilePath" class="text-danger"></span>
+                <input name="CoverImageFile" type="file" class="form-control" />
+              
             </div>
-
-
-
 
 
             <div class="form-group">
